--- a/haskell/advent.cabal
+++ b/haskell/advent.cabal
@@ -24,6 +24,8 @@ library
       Day1.Main
       Day1.Utils.IO
       Day1.Utils.Math
+      Day2.IO
+      Day2.Main
   other-modules:
       Paths_advent
   hs-source-dirs:
@@ -31,6 +33,7 @@ library
   build-depends:
       base >=4.7 && <5
     , optparse-applicative
+    , split
   default-language: Haskell2010
 
 executable advent-exe
@@ -44,6 +47,7 @@ executable advent-exe
       advent
     , base >=4.7 && <5
     , optparse-applicative
+    , split
   default-language: Haskell2010
 
 test-suite advent-test
@@ -61,4 +65,5 @@ test-suite advent-test
     , base >=4.7 && <5
     , hspec
     , optparse-applicative
+    , split
   default-language: Haskell2010
